# php-src

./: .cvsignore  ChangeLog  Makefile.in  NEWS  README.NEW-OUTPUT-API  README.SELF-CONTAINED-EXTENSIONS  README.STREAMS  README.WIN32-BUILD-SYSTEM  README.input_filter  TODO  UPGRADING  acinclude.m4  aclocal.m4  aolserver.c  build-defs.h.in  build.mk  build2.mk  buildconf  configure.in  configure.in.in  control_structures.h  dlist.c  dlist.h  dynlib.m4  fhttpd.c  genif.sh  header  internal_functions.c  main.h  makedist  makedist.ZendEngine2  mod_php3.c  mod_php3.h  mod_php4.c  mod_php4.h  php.ini-dist  php3_sprintf.c  php_compat.c  php_gpce.h  run-tests.php  (+1 more)
bindlib_w32/: gethnamaddr.c  getnetbyaddr.c  getnetbyname.c  getnetent.c  getnetnamadr.c  herror.c  hostnamelen.c  inet_addr.c  inet_net_ntop.c  inet_net_pton.c  inet_neta.c  inet_ntop.c  inet_pton.c  netdb.h  nsap_addr.c  res_comp.c  res_data.c  res_debug.c  res_init.c  res_mkquery.c  res_query.c  res_send.c  resolv.h  sethostent.c  writev.c
ext/: ext_skel.php  ext_skel_win32.php
ext/informix/: .cvsignore  Makefile.am  Makefile.in  config.m4  config.w32  ifx.ec  php_informix.h  php_informix_includes.h  setup.stub
ext/pgsql/: Makefile.am  config.m4  config.w32  pgsql.c  php3_pgsql.h  php_pgsql.h  setup.stub
ext/xml/: Makefile.am  Makefile.in  config.m4  config.w32  expat_compat.h  php3_xml.h  php_xml.h  xml.c
ext/xml/expat/: xmlparse.c  xmlrole.c  xmltok.c
main/: SAPI.c  SAPI.h  alloca.c  build-defs.h.in  config.nw.h  config.w32.h  config.w32.h.in  configuration-parser.y  fdfdata.c  fopen_wrappers.c  fopen_wrappers.h  getopt.c  internal_functions.c.in  internal_functions_nw.c  internal_functions_registry.h  internal_functions_win32.c  logos.h  main.c  memory_streams.c  mergesort.c  network.c  output.c  php.h  php3_compat.h  php_compat.h  php_content_types.c  php_content_types.h  php_embed.c  php_embed.h  php_getopt.h  php_globals.h  php_ini.c  php_ini.h  php_logos.c  php_logos.h  php_main.h  php_memory_streams.h  php_network.h  php_open_temporary_file.c  php_open_temporary_file.h  (+30 more)
(+1822 files in other folders)
